# MORK

./: .gitignore  Cargo.toml  mod.rs
metta/: Cargo.toml  run_examples.sh
metta/examples/: git_import.metta  he_atomspace.metta  he_evaluation.metta  he_quoting.metta  matespace.metta  matespace_count.metta  matespace_small.metta  mutex_and_transaction.metta  nilbc.metta  patrick_test.metta  pln_direct.metta  spaces2.metta  spaces3.metta  spaces_removeallatoms.metta  spaces_succeedspredicate.metta
metta/lib/: C_WRAPPER_SYSTEM.md  lib_he.metta  lib_patrick.metta
metta/libs/: math_extra.metta  math_extra.rs
metta/src/: atom.rs  builtins.rs  compile.rs  env.rs  eval.rs  func.rs  lib.rs  main.rs  parser.rs  plugin.rs  profile.rs  space.rs  symbol.rs  trace.rs
metta/src/builtins/: arithmetic.rs  boolean.rs  collections.rs  io.rs  mod.rs  state.rs  types.rs
metta/src/compile/: definitions.rs  mod.rs  reify.rs
metta/src/eval/: io.rs  mod.rs  python.rs  runtime.rs
metta/src/eval/forms/: control.rs  immediate.rs  mod.rs  query.rs
metta/src/eval/machine/: apply.rs  budget.rs  dispatch.rs  frame.rs  mod.rs  state.rs  (+4 more)
metta/src/eval_parts/: cek.rs  constrained.rs  core.rs  data_list.rs  io.rs  machine.rs  mod.rs  pattern.rs  python.rs  space_ops.rs  special.rs
metta/src/space/: core.rs  mod.rs  mutate.rs  query.rs  store.rs
metta/tests/: boolean_tests.rs  decons_atom_tests.rs  fib_test.rs  let_tests.rs  test_machine_phase1.rs  test_machine_phase2.rs  test_machine_phase3.rs  test_machine_phase4.rs  test_math_builtins.rs  test_surface_machine_alignment.rs  tests.rs
(+66 files in other folders)
