[package]
name = "mork-metta"
version = "0.1.0"
edition = "2024"

[features]
default = []
trace = []
python-bridge = ["dep:pyo3"]
plugins = ["dep:libloading"]
[dependencies]
mork = { workspace = true }
mork-expr = { workspace = true }
pathmap = { workspace = true }
pyo3 = { workspace = true, optional = true, features = ["auto-initialize"] }
libloading = { version = "0.8", optional = true }
rayon = "1"
